cmake_minimum_required( VERSION 3.20 FATAL_ERROR )

set( WORLDCRAFT_SOURCE_FILES )
BEGIN_SRC( WORLDCRAFT_SOURCE_FILES "Source Files" )
	SRC_GRP(
		SOURCES
		#{
			"../common/builddisp.cpp" # Noprecomp?
			"../common/disp_common.cpp" # Noprecomp?
			"../common/disp_powerinfo.cpp" # Noprecomp?
			"../common/keyframe/keyframe.cpp" # Noprecomp?
			"../game_shared/bone_setup.cpp" # Noprecomp?
			"../public/ChunkFile.cpp" # Noprecomp?
			"../public/collisionutils.cpp" # Noprecomp?
			"../public/imageloader.cpp" # Noprecomp?
			"../public/interface.cpp" # Noprecomp?
			"../public/mathlib.cpp" # Noprecomp?
			"../public/rope_physics.cpp" # Noprecomp?
			"../public/simple_physics.cpp" # Noprecomp?
			"../public/TGALoader.cpp" # Noprecomp?
			"../public/TokenReader.cpp" # Noprecomp?
			"../public/utlbuffer.cpp" # Noprecomp?
			"../public/vmatrix.cpp" # Noprecomp?
			"AngleBox.cpp"
			"ArchDlg.cpp"
			"AutoSelCombo.cpp"
			"Axes2.cpp"
			"BoundBox.cpp"
			"Box3D.cpp"
			"Brushops.cpp"
			"bsplighting.cpp"
			"bsplightingthread.cpp"
			"BuildNum.cpp" # Noprecomp?
			"Camera.cpp" # Noprecomp?
			"ChildFrm.cpp"
			"clipcode.cpp"
			"Clock.cpp"
			"CreateArch.cpp"
			"CullTreeNode.cpp"
			"DispDlg.cpp"
			"DispManager.cpp"
			"DispMapImageFilter.cpp"
			"DispPaint.cpp"
			"DispSew.cpp"
			"DispSubdiv.cpp"
			"DummyTexture.cpp"
			"DynamicDialogWnd.cpp"
			"EditGameClass.cpp"
			"EditGameConfigs.cpp"
			"EditGroups.cpp"
			"EditPathDlg.cpp"
			"EditPathNodeDlg.cpp"
			"EditPrefabDlg.cpp"
			"EntityConnection.cpp"
			"EntityHelpDlg.cpp"
			"EntityReportDlg.cpp"
			"FaceEditSheet.cpp"
			"FaceEdit_DispPage.cpp"
			"FaceEdit_MaterialPage.cpp"
			"FileSystem_WC.cpp" # Noprecomp?
			"FilterControl.cpp"
			"GameData.cpp"
			"GamePalette.cpp"
			"GDClass.cpp"
			"GDVar.cpp"
			"Gizmo.cpp" # Precomp: ????
			"GotoBrushDlg.cpp"
			"GroupList.cpp"
			"HelperFactory.cpp" # Noprecomp?
			"History.cpp"
			"IconComboBox.cpp"
			"InputOutput.cpp"
			"Keyboard.cpp"
			"keyvalues.cpp"
			"ListBoxEx.cpp"
			"LoadSave_MAP.cpp"
			"LoadSave_RMF.cpp"
			"MainFrm.cpp"
			"MakePrefabLibrary.cpp"
			"MapAlignedBox.cpp"
			"MapAnimationDlg.cpp"
			"MapAnimator.cpp"
			"MapAxisHandle.cpp"
			"MapCheckDlg.cpp"
			"Mapclass.cpp"
			"MapDecal.cpp"
			"MapDisp.cpp"
			"Mapdoc.cpp"
			"MapEntity.cpp"
			"MapErrorsDlg.cpp"
			"MapFace.cpp"
			"MapGroup.cpp"
			"MapHelper.cpp"
			"MapInfoDlg.cpp"
			"Mapkeyframe.cpp"
			"MapLight.cpp"
			"MapLightCone.cpp"
			"MapLine.cpp"
			"MapOverlay.cpp"
			"MapPath.cpp"
			"MapPoint.cpp"
			"MapPointHandle.cpp"
			"MapQuadBounds.cpp"
			"MapSideList.cpp"
			"MapSolid.cpp"
			"MapSphere.cpp"
			"Mapsprite.cpp"
			"MapStudioModel.cpp"
			"Mapview.cpp"
			"MapView2D.cpp"
			"MapView3D.cpp"
			"Mapworld.cpp"
			"Material.cpp"
			"materialdlg.cpp"
			"materialproxyfactory_wc.cpp"
			"MDIClientWnd.cpp"
			"MessageWnd.cpp"
			"misc.cpp"
			"NewDocType.cpp"
			"NewKeyValue.cpp"
			"Noise.cpp"
			"ObjectBar.cpp"
			"ObjectProperties.cpp"
			"OPTBuild.cpp"
			"OPTConfigs.cpp"
			"OPTGeneral.cpp"
			"OptionProperties.cpp"
			"Options.cpp"
			"OPTTextures.cpp"
			"OPTView2D.cpp"
			"OPTView3D.cpp"
			"OP_Entity.cpp"
			"OP_Flags.cpp"
			"OP_Groups.cpp"
			"OP_Input.cpp"
			"OP_Model.cpp"
			"OP_Output.cpp"
			"osver.cpp"
			"PasteSpecialDlg.cpp"
			"Prefab3D.cpp"
			"Prefabs.cpp"
			"PrefabsDlg.cpp"
			"ProcessWnd.cpp"
			"ProgDlg.cpp"
			"Render2D.cpp"
			"Render3D.cpp" # Noprecomp?
			"Render3DMS.cpp"
			"RenderUtils.cpp"
			"ReplaceTexDlg.cpp"
			"RichEditCtrlEx.cpp"
			"RunCommands.cpp"
			"RunMap.cpp"
			"RunMapCfgDlg.cpp"
			"RunMapExpertDlg.cpp"
			"SaveInfo.cpp" # Noprecomp?
			"ScaleVerticesDlg.cpp"
			"SearchReplaceDlg.cpp"
			"SelectEntityDlg.cpp"
			"SelectModeDlgBar.cpp"
			"Shell.cpp"
			"ShellMessageWnd.cpp"
			"Splash.cpp"
			"sprite.cpp"
			"SSolid.cpp"
			"StartupDlg.cpp"
			"StdAfx.cpp" # Create precomp: stdafx.h
			"StockSolids.cpp"
			"StrDlg.cpp"
			"StudioModel.cpp"
			"TargetNameCombo.cpp"
			"Texture.cpp"
			"TextureBar.cpp"
			"TextureBox.cpp"
			"texturebrowser.cpp"
			"TextureConverter.cpp"
			"TextureSystem.cpp"
			"TextureWindow.cpp"
			"TitleWnd.cpp"
			"Tool3D.cpp"
			"ToolAxisHandle.cpp"
			"ToolBlock.cpp"
			"ToolCamera.cpp"
			"ToolClipper.cpp"
			"ToolCordon.cpp"
			"ToolDecal.cpp"
			"ToolDisplace.cpp"
			"ToolEntity.cpp"
			"ToolMagnify.cpp"
			"ToolManager.cpp"
			"ToolMaterial.cpp"
			"ToolMorph.cpp"
			"ToolOverlay.cpp"
			"ToolPath.cpp"
			"ToolPickAngles.cpp"
			"ToolPickEntity.cpp"
			"ToolPickFace.cpp"
			"ToolPointHandle.cpp"
			"ToolSelection.cpp"
			"ToolSphere.cpp"
			"TransformDlg.cpp"
			"UndoWarningDlg.cpp"
			"ViewerSettings.cpp" # Noprecomp?
			"VisGroup.cpp"
			"WADTexture.cpp"
			"Worldcraft.cpp"
			"WorldcraftBar.cpp"
			"worldcraft_mathlib.cpp" # Noprecomp?

			"Worldcraft.rc"
		#}
	)
END_SRC( WORLDCRAFT_SOURCE_FILES "Source Files" )

set( WORLDCRAFT_HEADER_FILES )
BEGIN_SRC( WORLDCRAFT_HEADER_FILES "Header Files" )
	SRC_GRP(
		SOURCES
		#{
			"../common/builddisp.h"
			"../common/disp_common.h"
			"../common/ivraddll.h"
			"../common/keyframe/keyframe.h"
			"../engine/cache.h"
			"../game_shared/bone_setup.h"
			"../public/arraystack.h"
			"../public/basetypes.h"
			"../public/bspfile.h"
			"../public/bspflags.h"
			"../public/bumpvects.h"
			"../public/cache_user.h"
			"../public/ChunkFile.h"
			"../public/cmodel.h"
			"../public/collisionutils.h"
			"../public/const.h"
			"../public/filesystem.h"
			"../public/imageloader.h"
			"../public/interface.h"
			"../public/mathlib.h"
			"../public/NTree.h"
			"../public/plane.h"
			"../public/s3_intrf.h"
			"../public/studio.h"
			"../public/tgaloader.h"
			"../public/TokenReader.h"
			"../public/utlbuffer.h"
			"../public/utllinkedlist.h"
			"../public/utlmemory.h"
			"../public/utlrbtree.h"
			"../public/utlvector.h"
			"../public/vector.h"
			"../public/vector2d.h"
			"../public/vector4d.h"
			"../public/vmatrix.h"
			"../public/vplane.h"
			"../public/wadtypes.h"
			"../public/worldsize.h"
			"ActiveItemList.h"
			"AngleBox.h"
			"ArchDlg.h"
			"AutoSelCombo.h"
			"Axes2.h"
			"BlockArray.h"
			"BoundBox.h"
			"Box3D.h"
			"BrushOps.h"
			"bsplighting.h"
			"bsplightingthread.h"
			"BuildNum.h"
			"Camera.h"
			"ChildFrm.h"
			"clipcode.h"
			"ControlBarIDs.h"
			"CullTreeNode.h"
			"CustomMessages.h"
			"DispDlg.h"
			"DispManager.h"
			"DispMapImageFilter.h"
			"DispPaint.h"
			"DispSew.h"
			"DispSubdiv.h"
			"DummyTexture.h"
			"DynamicDialogWnd.h"
			"EditGameClass.h"
			"EditGameConfigs.h"
			"EditGroups.h"
			"EditPathDlg.h"
			"EditPathNodeDlg.h"
			"EditPrefabDlg.h"
			"EntityConnection.h"
			"EntityDefs.h"
			"EntityHelpDlg.h"
			"EntityReportDlg.h"
			"Error3d.h"
			"FaceEditSheet.h"
			"FaceEdit_DispPage.h"
			"FaceEdit_MaterialPage.h"
			"FileSystem_WC.h"
			"FilterControl.h"
			"GameData.h"
			"GamePalette.h"
			"GDClass.h"
			"GDVar.h"
			"Gizmo.h"
			"GlobalFunctions.h"
			"GotoBrushDlg.h"
			"GroupList.h"
			"HelperFactory.h"
			"HelperInfo.h"
			"Helpid.h"
			"History.h"
			"ibsplighting.h"
			"IconComboBox.h"
			"IEditorTexture.h"
			"InputOutput.h"
			"Keyboard.h"
			"keyvalues.h"
			"ListBoxEx.h"
			"MainFrm.h"
			"MapAlignedBox.h"
			"MapAnimationDlg.h"
			"MapAnimator.h"
			"MapAtom.h"
			"MapAxisHandle.h"
			"MapCheckDlg.h"
			"mapclass.h"
			"MapDecal.h"
			"MapDefs.h"
			"MapDisp.h"
			"mapdoc.h"
			"MapEntity.h"
			"MapErrorsDlg.h"
			"MapFace.h"
			"MapGroup.h"
			"MapInfoDlg.h"
			"Mapkeyframe.h"
			"MapLight.h"
			"MapLightCone.h"
			"MapLine.h"
			"MapOverlay.h"
			"MapPath.h"
			"MapPoint.h"
			"MapPointHandle.h"
			"MapQuadBounds.h"
			"MapSideList.h"
			"MapSolid.h"
			"MapSphere.h"
			"Mapsprite.h"
			"MapStudioModel.h"
			"MapView.h"
			"MapView2D.h"
			"mapview3d.h"
			"MapWorld.h"
			"Material.h"
			"materialdlg.h"
			"materialproxyfactory_wc.h"
			"MDIClientWnd.h"
			"MessageWnd.h"
			"ModelFactory.h"
			"MyCheckListBox.h"
			"NewDocType.h"
			"NewKeyValue.h"
			"ObjectBar.h"
			"ObjectPage.h"
			"ObjectProperties.h"
			"optbuild.h"
			"OPTConfigs.h"
			"OPTGeneral.h"
			"OptionProperties.h"
			"Options.h"
			"OPTTextures.h"
			"OPTView2D.h"
			"OPTView3D.h"
			"OP_ComplexObject.h"
			"OP_Entity.h"
			"OP_Flags.h"
			"OP_Groups.h"
			"OP_Input.h"
			"OP_Model.h"
			"OP_Output.h"
			"osver.h"
			"PakDoc.h"
			"PakFrame.h"
			"PakViewDirec.h"
			"PakViewFiles.h"
			"PasteSpecialDlg.h"
			"Prefab3d.h"
			"Prefabs.h"
			"PrefabsDlg.h"
			"ProcessWnd.h"
			"progdlg.h"
			"Render2D.h"
			"Render3D.h"
			"Render3DMS.h"
			"RenderUtils.h"
			"ReplaceTexDlg.h"
			"resource.h"
			"RichEditCtrlEx.h"
			"RunCommands.h"
			"RunMap.h"
			"RunMapCfgDlg.h"
			"RunMapExpertDlg.h"
			"SaveInfo.h"
			"ScaleVerticesDlg.h"
			"SearchBox.h"
			"SearchReplaceDlg.h"
			"SelectEntityDlg.h"
			"Shell.h"
			"ShellMessageWnd.h"
			"Splash.h"
			"sprite.h"
			"SSolid.h"
			"StartupDlg.h"
			"StatusBarIDs.h"
			"stdafx.h"
			"StockSolids.h"
			"StrDlg.h"
			"StudioModel.h"
			"TargetNameCombo.h"
			"Texture.h"
			"TextureBar.h"
			"TextureBox.h"
			"texturebrowser.h"
			"TextureConverter.h"
			"TextureSystem.h"
			"TextureWindow.h"
			"TitleWnd.h"
			"Tool3D.h"
			"ToolAxisHandle.h"
			"ToolBlock.h"
			"ToolCamera.h"
			"ToolClipper.h"
			"ToolCordon.h"
			"ToolDecal.h"
			"Tooldefs.h"
			"ToolDisplace.h"
			"ToolEntity.h"
			"ToolInterface.h"
			"ToolMagnify.h"
			"ToolManager.h"
			"ToolMaterial.h"
			"ToolMorph.h"
			"ToolOverlay.h"
			"ToolPath.h"
			"ToolPickAngles.h"
			"ToolPickEntity.h"
			"ToolPickFace.h"
			"ToolPointHandle.h"
			"ToolSelection.h"
			"ToolSphere.h"
			"TransformDlg.h"
			"Undo.h"
			"UndoWarningDlg.h"
			"ViewerSettings.h"
			"VisGroup.h"
			"WADTexture.h"
			"wndTex.h"
			"Worldcraft.h"
			"WorldcraftBar.h"
			"worldcraft_mathlib.h"
		#}
	)
END_SRC( WORLDCRAFT_HEADER_FILES "Header Files" )

add_object(
	TARGET worldcraft
	EXECUTABLE WIN32
	INSTALL_DEST "${GAMEDIR}/bin"
	INSTALL_OUTNAME "wc"
	SOURCES ${WORLDCRAFT_SOURCE_FILES} ${WORLDCRAFT_HEADER_FILES}
)

target_precompile_headers(
	worldcraft
	PRIVATE "stdafx.h"
)

target_include_directories(
	worldcraft PRIVATE

	"${SRCDIR}/worldcraft"

	#"${SRCDIR}/engine"
	"${SRCDIR}/common/MaterialSystem"
	"${SRCDIR}/game_shared"
)

target_compile_definitions(
	worldcraft PRIVATE

	USE_MATERIAL_SYSTEM
	VALVE
	IMAGE_LOADER_NO_DXTC
	PROTECTED_THINGS_DISABLE
)

target_link_libraries(
	worldcraft PRIVATE

	"$<${IS_WINDOWS}:winmm>"
	"$<${IS_WINDOWS}:opengl32>"
	"$<${IS_WINDOWS}:glu32>"
	"$<${IS_WINDOWS}:rpcrt4>"

	"$<$<AND:$<CONFIG:Release>,${IS_WINDOWS}>:nafxcw>"
	"$<$<AND:$<CONFIG:Release>,${IS_WINDOWS}>:Libcmt>"
	"$<$<AND:$<CONFIG:Debug>,${IS_WINDOWS}>:nafxcwd>"
	"$<$<AND:$<CONFIG:Debug>,${IS_WINDOWS}>:Libcmtd>"
)
